ENH: support 3rd printer model
Change-Id: Ib8c2c846f73a6ac14339e1d0222204d7440de014

--- a/resources/web/homepage/css/home.css
+++ b/resources/web/homepage/css/home.css
@@ -4,6 +4,7 @@
 	border: 0px;
 	margin: 0px;
 	font-size: 16px;
+    font-family: "system-ui", "Segoe UI", Roboto, Oxygen, Ubuntu, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-sans;
 }
 
 html, body {
