--- a/resources/web/guide/6/6.css
+++ b/resources/web/guide/6/6.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	border: 0;
 	margin: 0;		
+    font-family: "system-ui", "Segoe UI", Roboto, Oxygen, Ubuntu, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-sans;	
 }
 
 html,body
