ENH: Login button add Largen UI-Action
Change-Id: I40f668364730205c6cc1b916ef486fce836c08d8

--- a/resources/web/homepage/css/home.css
+++ b/resources/web/homepage/css/home.css
@@ -3,7 +3,6 @@
 	padding:0px;
 	border: 0px;
 	margin: 0px;
-	font-size: 16px;
     font-family: "system-ui", "Segoe UI", Roboto, Oxygen, Ubuntu, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-sans;
 }
 
@@ -13,6 +12,7 @@ html, body {
     margin: 0px;
     padding: 0px;
 	line-height: 20px;
+    font-size: 16px;	
 }
 
 .RedFont
@@ -72,6 +72,12 @@ body
 	cursor:pointer;
 }
 
+#LoginBtn:hover
+{
+	font-size:17px;
+}
+
+
 #NoPluginTip
 {
 	position: absolute;
@@ -80,7 +86,7 @@ body
 	bottom: 0px;
 	right: 0px;
 	z-index: 1;
-	display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: flex-end;
 	padding: 5px;
