ENH:adjust button border color in webview
Change-Id: Iea050335b1f51d95c4f14ab06bc1514b0f7209f4

--- a/resources/web/homepage/css/home.css
+++ b/resources/web/homepage/css/home.css
@@ -219,7 +219,7 @@ body
 
 .MenuItem
 {
-	border: 1px solid #4CAA50;
+	border: 1px solid #EEEEEE;
 	border-radius: 12px;
 	height: 101px;
 	width: 253px;
@@ -233,6 +233,7 @@ body
 
 .MenuItem:hover
 {
+	border-color: #4CAA50;
 	background-color: #E0FCEB;
 }
 
