ENH:  Optimize some web UI
Change-Id: I91f6691e5e5c19274c1bc3e6a9386e3f76ab259d

--- a/resources/web/guide/22/22.css
+++ b/resources/web/guide/22/22.css
@@ -8,10 +8,11 @@
 .CName
 {
 	width:130px;
-	min-width: 80px;
 	font-weight: 700;
 	height: 100%;
 	text-align: right;
+	white-space: nowrap;
+	flex-shrink: 0;
 }
 
 .CValues
