ENH: refine text & icon for Recent's context menu
Signed-off-by: yifan.wu <yifan.wu@bambulab.com>
Change-Id: I194afa16ad9b2c928548e7011a40718f9a53be8c

--- a/resources/web/homepage/css/home.css
+++ b/resources/web/homepage/css/home.css
@@ -404,14 +404,14 @@ body
 
 .CT_Delete
 {
-	background: url("../img/delete.png");
+	background: url("../img/remove.svg");
 	background-repeat: no-repeat;
 	background-size: contain;	
 }
 
 .CT_Explore
 {
-	background: url("../img/folder.png");
+	background: url("../img/open_folder.svg");
 	background-repeat: no-repeat;
 	background-size: contain;		
 }
