ENH: In case of low resolution, UserGuide Display
Change-Id: I14b764dc5f34421cadba329c9cd7a13fde0f2387
(cherry picked from commit 7c9ba185143a3d6ba96b2f28e479add3e6fe32df)

--- a/resources/web/guide/css/common.css
+++ b/resources/web/guide/css/common.css
@@ -57,7 +57,7 @@ body
 	height: 76%;
 	padding: 20px 40px;
 	overflow-x: hidden;
-	overflow-y:hidden;
+	overflow-y: auto;
 	text-align: left;
 	font-size: 14px;
 	line-height: 22px;
