ENH: Add darkmode of Html，depend on UserAgent
Change-Id: I8b60db9e2cb7b0d163288e3d8a23db10b64b9bb3

--- a/resources/web/guide/3/3.css
+++ b/resources/web/guide/3/3.css
@@ -1,7 +1,10 @@
+.PolicyArea
+{
+	background-color: #EBEBEB;	
+}
 
 #PolicyTxt
 {
-	background-color: #EBEBEB;
 	padding: 12px;
 	word-wrap:break-word;
 	overflow-y: scroll;
