ENH: fix some color again
Change-Id: I8d06c7859cdcb232b0625ef1c22e562253be4dcf
(cherry picked from commit 32d143fe029e36715231156ce857fd841a4a3748)

--- a/resources/web/homepage/css/dark.css
+++ b/resources/web/homepage/css/dark.css
@@ -1,11 +1,11 @@
 body
 {
-	background-color:#2D2D31;
+	background-color:#242428;
 }
 
 *
 {
-	border-color: #6f6f6f;
+	border-color: #3E3E45;
 }
 
 
