ENH: adjust right area scrolBar and text color
Change-Id: Ic430728bef302fec47a4304679cc5955a435d5e3
(cherry picked from commit 2a28dd67098e298957a83bb4d446623844db6bd8)

--- a/resources/web/guide/css/dark.css
+++ b/resources/web/guide/css/dark.css
@@ -1,14 +1,18 @@
 *
 {
-	color: #fff;
+	color: #efeff0;
 }
 
 body
 {
-	background-color:#54545A;
-	color: #fff;
+	background-color:#3E3E45;
+	color: #efeff0;
 }
 
+#Title div
+{
+	color: #21A452;
+}
 
 /*-----Button-----*/
 .GrayBtn
