--- a/resources/web/homepage/css/dark.css
+++ b/resources/web/homepage/css/dark.css
@@ -11,7 +11,7 @@ body
 
 .TextS1
 {
-	color:#fff;
+	color:#efeff0;
 }
 
 
@@ -21,7 +21,7 @@ body
 #LogoutBtn:hover
 {
 	background: #243E30;
-	color: #fff;
+	color: #efeff0;
 }
 
 .BtnItem
@@ -31,7 +31,7 @@ body
 
 .BtnItem:hover
 {
-	color: #fff;
+	color: #efeff0;
 	background-color: #243E30;
 }
 
@@ -42,7 +42,7 @@ body
 
 .BtnItemSelected
 {
-	color: #fff;
+	color: #efeff0;
 	background-color: #243E30;
 }
 
@@ -65,7 +65,7 @@ body
 
 #recnet_context_menu
 {
-	color: #fff;
+	color: #efeff0;
 	background-color:#242428;
 	border: 0px;
 	box-shadow: 0px 0px 3px #DCDCDC;
