ENH:  ScrollBar Color
Change-Id: Ice87a8ddae0ccadaa63652bb4fa8464c4bee408f
(cherry picked from commit 5db33442578ac72433131229889cc1055527de74)

--- a/resources/web/guide/3/3.css
+++ b/resources/web/guide/3/3.css
@@ -7,9 +7,12 @@
 {
 	padding: 12px;
 	word-wrap:break-word;
-	overflow-y: scroll;
+	overflow-y: auto;
 	min-height: 200px;
 	text-indent: 2em;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #D7D7D7;
 }
 
 #PolicyTxt::-webkit-scrollbar {/*滚动条整体样式*/
