FIX: background color of popup dialog
Change-Id: I2ff95a45cac40be3ceb3920739a86833ac730898
(cherry picked from commit 9fdefaa7f97b70fb6c74d75ef133d5b7a677c63a)

--- a/resources/web/guide/21/21.css
+++ b/resources/web/guide/21/21.css
@@ -113,9 +113,10 @@
 {
 	display: none;
 	width: 400px;
-	border: 1px solid #000;
+	border-width: 1px;
+	border-style: solid;
 	border-radius: 4px;
-	background-color: #fff;	
+	background-color: inherit;	
 	position: absolute;
 	left: 50%;
 	top: 200px;
