--- a/resources/web/guide/23/23.css
+++ b/resources/web/guide/23/23.css
@@ -80,9 +80,10 @@ input
 {
 	display: none;
 	width: 500px;
-	border: 1px solid #000;
+	border-width: 1px;
+	border-style: solid;
 	border-radius: 4px;
-	background-color: #fff;	
+	background-color: inherit;	
 	position: absolute;
 	left: 50%;
 	top: 200px;
