change app color

--- a/resources/web/guide/6/6.css
+++ b/resources/web/guide/6/6.css
@@ -28,7 +28,7 @@ html,body
 	padding: 1.5mm 6mm;
 	font-size: 14px;
 	text-align: center;
-	background-color: #00AE42;
+	background-color: #009688;
 	border-radius: 6px;
 	color: #fff;
 	cursor: pointer;
@@ -93,7 +93,7 @@ html,body
 	float: left;
 	height:20px;
 	width: 0%;
-	background-color:#00AE42;
+	background-color:#009688;
 	border-radius: 20px;		
 }
 
