--- a/resources/web/homepage/css/home.css
+++ b/resources/web/homepage/css/home.css
@@ -168,7 +168,7 @@ body
 	height: 24px;
 	line-height: 24px;
 	color: #00B731;
-	border: 1px solid  #00AE42;
+	border: 1px solid  #009688;
 	border-radius: 4px;
 	cursor: pointer;
 	margin-top: 5px;
