--- a/resources/web/login/css/login.css
+++ b/resources/web/login/css/login.css
@@ -30,7 +30,7 @@ body
 	padding: 3mm 10mm;
 	font-size: 14px;
 	text-align: center;
-	background-color: #00AE42;
+	background-color: #009688;
 	border-radius: 20px;
 	color: #fff;
 	cursor: pointer;
