--- a/resources/web/guide/11/11.css
+++ b/resources/web/guide/11/11.css
@@ -44,13 +44,13 @@
 
 .RegionSelected
 {
-	background-color:#00AE42;
+	background-color:#009688;
 	color: #fff;
 }
 
 .RegionSelected:hover
 {
-	background-color:#00AE42;
+	background-color:#009688;
 	color: #fff;	
 }
 
