--- a/resources/web/guide/21/21.css
+++ b/resources/web/guide/21/21.css
@@ -7,7 +7,7 @@
 .BlockBanner
 {
 	padding: 0px;
-	border-bottom:#00AE42 1px solid;
+	border-bottom:#009688 1px solid;
 	width: 100%;
 }
 
@@ -27,7 +27,7 @@
 .BlockBanner  a
 {
 	display: inline-block;
-	background-color:#00AE42;
+	background-color:#009688;
 	line-height: 40px;
 	height: 40px;
 	padding: 0px 24px;
