--- a/resources/web/guide/23/23.css
+++ b/resources/web/guide/23/23.css
@@ -33,7 +33,7 @@ input
 #ItemSelectArea
 {
 	height:40px;
-	border-top: 1px solid #00AE42;
+	border-top: 1px solid #009688;
 	display: flex;
 	align-items: center;
 }
