--- a/resources/web/guide/24/24.css
+++ b/resources/web/guide/24/24.css
@@ -6,7 +6,7 @@
 .BlockBanner
 {
 	padding: 0px;
-	border-bottom:#00AE42 1px solid;
+	border-bottom:#009688 1px solid;
 	width: 100%;
 }
 
@@ -37,7 +37,7 @@
 
 .Banner-Btn-green
 {
-	background-color: #00AE42;
+	background-color: #009688;
 	color: #fff;
 	padding: 0px 6px;
 	min-width: 50px;
@@ -50,7 +50,7 @@
 .BlockBanner  a
 {
 	display: inline-block;
-	background-color:#00AE42;
+	background-color:#009688;
 	line-height: 40px;
 	height: 40px;
 	padding: 0px 24px;
