--- a/resources/web/guide/css/common.css
+++ b/resources/web/guide/css/common.css
@@ -124,7 +124,7 @@ body
 
 .NormalBtn:hover
 {
-	background-color:#00f0d9;
+	background-color:#4db6ac;
 }
 
 .GrayBtn
@@ -176,7 +176,7 @@ body
 
 .SmallBtn_Green:hover
 {
-	background-color: #00f0d9;
+	background-color: #4db6ac;
 }
 
 /*---HyperLink---*/
