--- a/resources/web/homepage/css/dark.css
+++ b/resources/web/homepage/css/dark.css
@@ -62,7 +62,7 @@ body
 /*-----Right Top MenuBtn-----*/
 .MenuItem:hover
 {
-	border-color: #00f0d9;
+	border-color: #4db6ac;
 	background-color: #004942;
 }
 
